src/styles/CSS/AppBody.css
/* ... */
.upper-paragraph{
  width: 48%;
  float: left;
  margin-left: 20px;
}
.lower-paragraph{
  width: 33%;
  float: left;
  margin-top: 50px;
}
.package-main-container img{
  width: 500px;
  height: 300px;
  position: absolute;
  top: 300px;
  left: 50%;
  margin-left: -250px;
}
.packages-main input {
  position: absolute;
  bottom: 20px;
  left: 50%;
  margin-left: -150px;
  height: 50px;
  width: 300px;
  border: none;
  border-radius: 25px;
  background-color: #4F7131;
  color: #fff;
  cursor: pointer;
  font-size: 20px;
}
.packages-main input:hover{
  opacity: 0.6;
}
.package-li{
  text-decoration: none;
  color: #313131;
}
.contact-main{
  height: calc(100% - 122px);
  width: 100%;
  position: absolute;
  bottom: 0;
  background-color: #313131;
  color: #fff;
}
.contact-methods-container{
  width: 90%;
  height: 400px;
  margin: auto;
}
.call-container{
  float: left;
  width: 50%;
}
.send-email-container{
  float: right;
  width: 38%;
  height: 90%;
}
.send-email-container input{
  width: 80%;
  height: 30px;
  border: none;
  border-bottom: 2px solid #ffdc0c;
  background-color: #313131;
  color: #fff;
}
.send-email-container select{
  width: 80%;
  height: 30px;
  margin-top: 20px;
  margin-bottom: 20px;
  border: none;
  border-bottom: 2px solid #ffdc0c;
  background-color: #313131;
  color: #fff;
}
.send-email-container textarea{
  resize: none;
  width: 80%;
  height: 200px;
  border: 2px solid #ffdc0c;
  background-color: #515151;
  padding-left: 10px;
  color: #fff;
  margin-bottom: 20px;
}
.send-email-container button{
  width: 25%;
  height: 30px;
  background-color: #ffdc0c;
  color: #313131;
  cursor: pointer;
  border: none;
}
.send-email-container button:hover{
  border: 2px solid #ffdc0c;
  width: calc(25% - 4px);
  height: 26px;
  background-color: #313131;
  color: #fff;
}
.locations-container{
  height: 400px;
  width: 50%;
  position: relative;
  bottom: 200px;
  left: 30px;
}
.map-container{
  margin: auto;
  width: 80%;
  height: 80%;
  background-color: #fff;
}
.modal{
  position: absolute;
  height: 100%;
  width: 100%;
  background: rgba(0, 0, 0, 0.5);
  z-index: 999;
}
.modal div{
  height: 320px;
  width: 300px;
  position: absolute;
  top: 50%;
  left: 50%;
  margin-top: -100px;
  margin-left: -160px;
  background-color: #313131;
  color: #fff;
  padding-left: 10px;
  padding-right: 10px;
}
.modal-btn{
  background-color: #4F7131;
  color: #fff;
  border: none;
  border-radius: 20px;
  width: 80%;
  height: 40px;
  margin-top: 20px;
  cursor: pointer;
}
.modal-btn:hover{
  opacity: 0.6;
}
@media screen and (min-width: 739px) and ( max-width: 1271px){
  .offer-container{
    margin: auto;
    float: left;
    position: absolute;
    top: 20%;
    left: 0;
    padding-left: 5%;
    height: 100%;
    width: 95%;
  }
  .user-packages{
    width: 30%;
    position: relative;
  }
  .user-packages ul{
    font-size: 14px;
  }
  .main-page-body p{
    height: auto;
  }
}
/* ... */

